# alice_bot

./: .gitignore  Cargo.toml  README.md
config/: config.json  keys.json
src/: main.rs
src/commands/: admin_commands.rs  mod.rs  user_commands.rs
src/commands/command_functions/: backtrack.rs  bubble_wrap.rs  mod.rs
src/config/: keys.json
src/modules/: channel_message_logger.rs  channel_msg_logger.rs  local_msg_logger.rs  message_stalker.rs  message_storage_logger.rs  message_throwback.rs  mod.rs  msg_stalker.rs  msg_storage_logger.rs
src/modules/formatters/: log_embed_formatter.rs  mod.rs
src/modules/handlers/: database_handler.rs  mod.rs
src/modules/handlers/models/: reputation.rs
src/modules/tools/: config_manager.rs  create_directory.rs  key_manager.rs  mod.rs
