[package]
name = "alice_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3.17"
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "cache", "rustls_backend"] }
tokio = { version = "1.32.0", features = ["full"] }
mini-redis = "0.4.1"
serde = "1.0.188"
serde_json = "1.0.107"
